TimeUtil#elapsed now returns Duration